--- a/data-model-patterns/5.PROCEDURES-AND-ACTIVITIES.md
+++ b/data-model-patterns/5.PROCEDURES-AND-ACTIVITIES.md
@@ -19,8 +19,9 @@ The actual carrying out of a PROCEDURE is an ACTIVITY. Important attributes of a
 活动被程序所指向，一个程序可能实现一个或多个活动。这个图描画了一个组织关注于跟踪即兴的活动或者跟踪之前定义好的流程。如果仅关注的活动被之前定义的程序所执行，这个图就能改变去展示活动。
 Figure 5.1 shows that an ACTIVITY may be to carry out a PROCEDURE, while a PROCEDURE may be implemented in one or more actual ACTIVITIES.This figure depicts an organization interested in keeping track of impromptu ACTIVITIES ----- as well as ones that are the execution of predefined PROCEDURES.If the only ACTIVITIES of interest were those to carry out predefined PROCEDURES, the diagram would have to be changed to show a solid line coming from ACTIVITY.That is,in some organizations, it might be more accurate to assert that each ACTIVITY must be to carry out a PROCEDURE.
 
-## DIVIDING ACTIVITIES
+## DIVIDING ACTIVITIES（切分活动）
 
+组成流程的步骤的步骤。
 Figure 5.2 shows two other aspects of activities: First, the steps that constitute the PROCEDURE may be called occurrences of PROCEDURE STEP,while the actual steps performed when the activity is carried out are occurrences of ACTIVITY STEP.That is, each ACTIVITY may be composed of one or more ACTIVITY STEPS,and each PROCEDURE may be composed of one or more PROCEDURE STEPS.
 
 这适用于，若活动是十分清晰得定义在一个层级。当流程或活动可以被切分到更远，细化到子级。那就需要另一种方式了。
@@ -32,17 +33,18 @@ An ACTIVITY, then, either may be composed of one or more ACTIVITY STEPS (as desc
 
 A corresponding pig's ear appears on PROCEDURE, showing that a PROCEDURE also either may be composed of one or more PROCEDURE STEPS, or may be composed of one or more other PROCEDURES. These component PROCEDURES may be broken down into successively smaller PROCEDURES. This way of breaking things down into progressively smaller pieces is shown in Figure 5.2.
 
-注意，若一个活动由流程来执行，由理由相信活动步骤可能基于相符的流程步骤。比如，一个一次性的活动可以被永久的流程构造所实现，当然这最终依赖于实际情况。
+注意，若一个活动由流程来执行，有理由相信活动步骤可能基于相符的流程步骤。比如，一个一次性的活动可以被永久的流程构造所实现，当然这最终取决于实际情况。
 Note that in Figure 5.2, if an ACTIVITY is to carry out a PROCEDURE, it is reasonable to expect that an ACTIVITY STEP may be based on a corresponding PROCEDURE STEP. That is, the structure of a one-time activity may be derived from the permanent structure of the procedure it is implementing. Whether this is in fact so will depend on actual circumstances.
 
 一个更加简洁的方式来呈现同样的配置在5.3。在这幅图里，一个活动步骤是活动的子类型，一个流程步骤是流程的子类型，每个流程可能被一个或多个流程组成，每个活动都由一个或多个活动组成。
 A more compact way of showing this same configuration appears in Figure 5.3. In this drawing, an ACTIVITY STEP is a subtype of ACTIVITY, and PROCEDURE STEP is a subtype of PROCEDURE. Thus, each OTHER PROCEDURE may be composed of one or more PROCEDURES (either PEOCEDURE STEPS or OTHER PROCEDURES), and each OTHER ACTIVITY may be composed of one or more ACTIVITIES (either ACTIVITY STEPS or OTHER ACTITIES). This configuration allows each structure to go down as many levels as necessary. PROCEDURE STEP and ACTIVITY STEP are not required, but if they are specified, they can only be at the bottom of each respective structure .
 
+要注意一个活动（或者活动步骤）可能仅是一个活动的部分。类似的，一个流程可能仅是一个其他流程的部分。
 In Figure 5.3, we are asserting that each ACTIVITY (ACTIVITY STEP or OTHER ACTIVITY) may be part of one and only one OTHER ACTIVITY. Similarly, each' PROCEDURE (PROCEDURE STEP or OTHER PROCEDURE) may be part of one and only one OTHER PROCEDURE. In your organization, this may be true-but then again, it may not be. 
 
 It is conceivable that a PROCEDURE STEP (such as "assemble the framis") might be part of more than one larger procedure (such as "fix the scrope" and "calibrate the flim-flam rods"). In that case, the part of /composed of relationships in Figures 5.2 and 5.3 would be "many-to-many," requiring the addition of intersect entities. This would be a "structure" entity, such as the GEOGRAPHIC STRUCTURE ELEMENT discussed in Chapter Three, or the ASSET TYPE STRUCTURE ELEMENT in Chapter Four. This is less common than the one-to-many version, however, so we shall not pursue it here.
 
-## WORK ORDERS
+## WORK ORDERS（工作顺序）
 
 若工作用行为和程序来表示，那么支持这项工作的活动可以定义为工作顺序。一个工作顺序通常直接收入到文档里。工作顺序必须授权多个活动。注意，在一些组织里，一个活动可以执行但没有通过工作顺序授权。一个行为仅被一个工作顺序授权这是一个关系。你需要去决定这种关系是否需要强制执行。
 While the work to be done is represented by ACTIVITIES and PROCEDURES, sponsorship of the work is represented by the entity WORK ORDER. (See Figure 5.4.) That is, a WORK ORDER is usually embodied in a document authorizing work to be done--the ACTIVITIES. A WORK ORDER may be the authorization for one or more ACTIVITIES. Note, however, that in some organizations, an activity may be carried out without being authorized by a work order. Hence, the relationship that each ACTIVITY may be authorized by one WORK ORDER. You will have to decide in your organization whether that relationship should be mandatory.
@@ -55,7 +57,7 @@ The authorization embodied in a WORK ORDER is exercised to fulfill the WORK ORDE
 
 In addition to "work order number," "order quantity," and "order date," attributes of WORK ORDER might include "expected start date," "actual start date," "expected end date," "actual end date," and so forth.
 
-## LABOR USAGE
+## LABOR USAGE（劳工消耗）
 
 人在独立的活动和工作顺序里扮演不同的角色。可能有管理人员，技术角色。
 PEOPLE (and ORGANIZATIONS too, for that matter) play different roles in both individual ACTIVITIES and WORK ORDERS as a whole. These could be administrative roles (such as project secretary), or technical roles (such as chief engineer). There are several ways to represent this, as shown in Figure 5.5: A PARTY may be given one or more WORK ORDER ROLES in a WORK ORDER. Each WORK ORDER ROLE, then, is played by a PARTY in a WORK ORDER. Each WORK ORDER ROLE must be defined by a WORK ORDER ROLE TYPE, such as "project manager."
@@ -147,12 +149,14 @@ The fourth type, a PREVENTIVE MAINTENANCE WORK ORDER,authorizes work to be perfo
 
 As with other WORK ORDERS,MAINTENANCE WORK ORDERS may be charged with ACTUAL ASSET USAGES,and may be charged with TIME SHEET ENTRIES. "Total material cost," "total labor cost," and "total cost" may be derived as previously described and portrayed in Figures 5.6 and 5.7.
 
-### Production Orders
+### Production Orders（制造业）
 
 When the work to be done is the manufacture of a company's products, the model changes somewhat, although it retains much of the same pattern as that for maintenance.
 
+在维护和生产工作流里的两点主要区别，一是生产关注于对象的影响，和对象的地址。
 The two primary differences between MAINTENANCE WORK ORDERS and PRODUCTION ORDERS concern the objectives of the effort, and the return of SITE, which we introduced in Chapter Three. Some names change as well.
 
+我们重命名工作流到生产流，生产固定资产。
 in Figure 5.10, we've renamed WORK ORDER to PRODUCTION ORDER, and its objective, instead of being to fix, install, remove, or inspect a PIECE OF EQUIPMENT,is to make an ASSET TYPE. Upon completion, a PRODUCTION ORDER may be the source of one or more PRODUCTION DELIVERIES of an ASSET. The PRODUCTION ORDER might produce DISCRETE ITEMS or additions to INVENTORY.
 
 把活动重命名为制造步骤继续基础的活动。在制造活动中，每个活动的地址仅表示单独的一工作项被创造出的地址。伴随着制造顺序，这个地址似乎很重要，的确，这个地址很可能就是工厂或者工作中心。
@@ -161,14 +165,74 @@ To better reflect the language of the typical manufacturing plant, we have taken
 实际上，建模基于现实需要。在一些方案里，工作中心不是那么重要。
 Actually, the organization being modeled will determine whether true. In some plants, WORK CENTERS may not be important. The plant also determines whether a MANUFACTURING STEP must be to carry out a predefined PROCEDURE. In highly controlled industries like pharmaceuticals, this would be so, but in others, the knowledge of a craftsman, rather than published procedures, may be the source of the step. Figure 5.10 takes this more craft-oriented view that each MANUFACTURING STEP may be to carry out a PROCEDURE。
 
-通常，制造的顺序是提前定义好的。
-Normally, the manufacturing sequence is defined in advance, in terms of the WORK CENTERS that a PRODUCTION ORDER must visit. The fact that an ASSET TYPEis normally processed in a particular WORK CENTER is called a ROUTING STEP. That is, each ROUTING STEP must be to make a particular ASSET TYPE, and this take place at a particular work center.this routing step then may be the basic for one or more actual manufacturing steps that are part of production orders.Figure 5.10 show this.
+通常，制造的顺序是提前定义好的,目的在于工作中心（每个生产顺序都必须被访问）。实施上，一个资产类型通常会在一种被称为routing step的工作中心被处理。每个routing step必定处理一种特殊的资产类型，并发生在特定的工作中心。这个routing step可能作为一个或多个制造顺序的基础。见图5.10。举个例子，批量生产墨水的企业，一个routing step放置了批量的10号蓝色墨水和23号墨水瓶。第一步就是组合这些，第二步就是静置20分钟，以此类推。
+Normally, the manufacturing sequence is defined in advance, in terms of the WORK CENTERS that a PRODUCTION ORDER must visit. The fact that an ASSET TYPE is normally processed in a particular WORK CENTER is called a ROUTING STEP. That is, each ROUTING STEP must be to make a particular ASSET TYPE, and this take place at a particular work center.this routing step then may be the basic for one or more actual manufacturing steps that are part of production orders.Figure 5.10 show this.for example,in the manufacturing of a batch of printer's ink,a routing step places the batch of #10 blue is vessel 23.the first manufacturing step is to combine ingredients;the second is to stir for twenty minutes;and so forth.
 
-一种更加熟悉的模型，会把构建步骤分组。因此每种资产类型可能由1个或多个构建组来构成。
+![5.10](figure5.10.png)
+
+一种更加常见的模型，会把ROUTING STEPS分组成ROUTINGS。因此每种资产类型可能由1个或多个ROUTINGS来制造。这就允许为了构建相同的产品而可选择不同的ROUTINGS。在任意的情况下，相同的资产也可选不同的工作中心来制造。这些都可以被控制通过声明相同的步骤编号给多个ROUTING STEPS。
 A more sophisticated model than that shown would group ROUTING STEPS into ROUTINGS,so that each ASSET TYPE may be made via one or more ROUTINGS(sets of ROUTING STEPS), each of which is composed of one or more ROUTING STEPS. This allows for alternative ROUTINGS for building the same product. In either case, the same ASSET TYPE may be made in more than one WORK CENTER as alternatives, rather than as a sequence of steps. This could be controlled by assigning the same "step number" to multiple ROUTING STEPS。
 
 Each MANUFACTURING STEP, then, either must be at a SITE (usually a WORK CENTER,but in some companies, it is conceivable that larger SITES may have to be identified), or it must be based on a ROUTING STEP(that identifies a WORK CENTER/SITE).
 
-As with MAINTENANCE WORK ORDERS, labor usage by a PRODUCTION ORDER may be recorded via TIME SHEET ENTRIES,charged to either individual manNUFACTURINGS TEPS,or to the PRODUCTION ORDER as a whole. Calculation of "total labor
-cost" for the PRODUCTIONORDERis then done as was shown in Figure 5.6. In most organizations, however, production roles need not be defined in advance,
-so the WORK ORDER ROLE entity
+As with MAINTENANCE WORK ORDERS, labor usage by a PRODUCTION ORDER may be recorded via TIME SHEET ENTRIES,charged to either individual MANUFACTURING STEPS,or to the PRODUCTION ORDER as a whole. Calculation of "total labor
+cost" for the PRODUCTION ORDER is then done as was shown in Figure 5.6. In most organizations, however, production roles need not be defined in advance,so the WORK ORDER ROLE entity usually disappears from the production model.Activity Assignment could be appropriate in certain manufacturing environments,but,to keep the diagram manageable,the entity and time sheet entry have been left off figure5.10.
+
+a production order certainly consumes raw materials.when we model a manufacturing plant,we may rename Actual Asset Usage as Actual Part Usage or Actual Material Usage,depending on what is being manufactured.Structurally, however, the ACTUAL.... USAGE remains as described earlier. Consumption may be recorded for individual MANUFACTURING STEPS or for the PRODUCTION ORDER as a whole. That is, each ACTUAL ASSET USAGE must be either charged to one and only one PRODUCTION ORDER, or charged to one and only one MANUFACTURING STEP. Since the calculation of "total material cost" for the PRODUCTION ORDER is shown in Figure 5.7, it has been left off Figure 5.10.
+
+As before, consumption may be recorded either of a physical ASSET-a DISCRETE ITEM or a quantity from INVENTORY-Or of a quantity of unspecified products described as an ASSET TYPE(such as natural gas).
+
+In addition to the consumption of labor and materials, MANUFACTURING STEPSin a PRODUCTION ORDER may also explicitly make use of one or more PIECES OF EQUIPMENT. Since each PIECE OF EQUIPMENT may also be used in one or more MANUFACTURING STEPS,it is necessary to define the entity EQUIPMENT USAGE. This enhancement is shown in Figure 5.10, where the diagram shows EQUIPMENT USAGE as the fact that a particular PIECE OF EQUIPMENT has been used in a particular MANUFACTURING STEP. That is, each MANUFACTURING STEP may be charged with one or more EQUIPMENT USAGES,each of which is of a particular PIECE OF EQUIPMENT. Conversely, each PIECE OF EQUIPMENT may be subject to one or more EQUIPMENT USAGES,where each of these must be charged to a MANUFACTURING STEP.
+
+The cost of EQUIPMENT USAGE may be calculated the same way other costs are calculated: On Figure 5.10, the "charge rate" for a PIECE OF EQUIPMENT is multiplied by the "number of hours" of its EQUIPMENT USAGE, to produce a "cost" of the EQUIPMENT USAGE. The "cost" of all EQUIPMENT USAGES for a MANUFACTURING STEP can then be added together to produce the "equipment cost" for that MANUFACTURING STEP. Adding together the "equipment cost" for all MANUFACTURING STEPS in a PRODUCTION ORDER gives the "total equipment cost" for the PRODUCTION ORDER.
+
+As an example, if 2 hours on a device ("number of hours" of EQUIPMENT USAGE) are used at $55 per hour ("charge rate" of PIECE OF EQUIPMENT), then "cost" for the EQUIPMENT USAGE is $110. If the sum of all other EQUIPMENT USAGES
+for this MANUFACTURING STEP were $3,100, the "equipment cost" for the MANUFACTURING STEP would be $3,210. If the cost of all other MANUFACTURING STEPS for this PRODUCTION ORDER were $10,450, then the "total equipment cost" for thePRODUCTION ORDER would be 513,660.
+
+The "total cost" of the PRODUCTION ORDER, then (and by extension, of other kinds of WORK ORDERS as well), has now been expanded to the sum of "total labor cost," "total material cost," and "total equipment cost." The "unit cost" of the PRODUCTION (or other WORK) ORDER is the "total cost" divided by the "quantity completed." If the "total cost" of the PRODUCTION ORDER is $15,000 and the "quantity completed" is 1,000 units, then the "unit cost" is $15
+
+The example that ,vas presented in Table 5.1 is expanded in Table 5.2 to include this calculation of equipment usage and the delivery cost.
+
+Note that EQUIPMENT USAGE refers to the use of a PIECE OF EQUIPMENT in the production process, not to its inclusion in the finished product, as is implied by ACTUAL ASSET USAGE. The two could be combined, however, if this distinction is not important. In that case, "number of hours" would be renamed something more generic, like "quantity," and "unit of measure" ("hours" or "pieces") would have to be added as an attribute, to qualify the "quantity."
+
+While a PRODUCTION ORDER makes something according to the specifications of an ASSET TYPE, it actually delivers ASSETS. That is, it is the source of one or more PRODUCTION DELIVERIES of an ASSET. (This was shown in Figure 5.10.) Each PRODUCTION DELIVERY is of an ASSET from a PRODUCTION ORDER. It is the nature of the plant and the production process that will determine whether the ASSET delivered is INVENTORY, a PIECE OF EQUIPMENT, or another DISCRETE ITEM.
+
+The" delivery cost" of the PRODUCTION DELIVERY is calculated as the "unit cost" of the PRODUCTION ORDER multiplied by the "quantity" of the PRODUCTION DELIVERY. If, in the example above, in which the "unit cost" of 1,000 completed units was $15, only 500 units are delivered to stock, the "delivery cost" of the PRODUCTION DELIVERY is 57,500 (515 times 500 units). In the example in Table 5.2, if the first delivery consists of 200 units of the 500 completed, it will have a "delivery cost" of 5460 (52.30 times 200).
+
+![table5.2](table5.2.png)
+
+In the pharmaceutical and chemical industries, PRODUCTION ORDERS are often called LOTS, a term we first saw in Chapter Four. One difference between that setting and the situation of other manufacturers is that each LOT INVENTORY must be received from only one LOT, so there is no need for the PRODUCTION DELIVERY entity. Each LOT, of course, may be the source of one or more LOT INVENTORIES. (See Figure 5.11.)
+
+![figure5.11](figure5.11.png)
+
+### Projects
+
+Like PRODUCTION ORDERS, PROJECTS are often the source of a DELIVERY of an ASSET, but the ASSET is usually big, like a building or a bridge. Alternatively, a PROJECT may be simply to accomplish a specific goal, such as putting on a theatrical production. Interestingly enough, models of the various kinds of PROJECTS are not significantly different from the generic WORK ORDER model presented earlier in this chapter. A particular kind of PROJECT may vastly increase the number of occurrences of ACTIVITY /MANUFACTURING STEP, PART USAGE, or TIME SHEET ENTRY, but the fundamental meaning of these entities and their relationship to the WORK ORDER is unchanged.
+
+Where PROJECTS are unique, however, is in their concern for the underlying structure of ACTIVITIES.
+
+Previously, we discussed the decomposition of ACTIVITIES into progressively smaller ACTIVITIES, thereby creating what project managers call a "work breakdown structure." Modeled in Figures 5.2 and 5.3, this concept is an important part of project management. Similarly, as shown previously in the same figures, a PROCEDURE may be composed of one or more other PROCEDURES. In the context of projects, PROCEDURE will go by the more abstract name ACTIVITY TYPE.
+
+A second important aspect of activity organization is the fact that one ACTIVITY or ACTIVITY TYPE may be required to be completed before another ACTIVITY or ACTIVITY TYPE is started. Figure 5.12, for example, contains a PERT chart that shows the sequence of steps required for the ACTIVITY TYPE "Replace power supply." The ACTIVITY TYPE "Replace power supply" is composed of
+
++ Remove cover
++ Remove power supply
++ Remove wiring harness
++ Install new power supply
++ Install new wiring harness
++ Replace cover
+
+![figure5.12](figure5.12.png)
+
+The PERT chart shows that "Remove cover" must be completed before starting either "Remove power supply" or "Remove wiring harness." Similarly, "Install new power supply" and "Install new wiring harness" must be completed before beginning to "Replace cover." In each case, the subsequent activity can be considered to be dependent upon the prior one.
+
+一种依赖可以被应用到一对行为类型，或者说仅适用一种特殊的行为。一个设计依赖描述了行为类型之间的依赖。它描述了这样的事实不管什么行为类型要被实践，一个特定的行为必须在其之前或者之后。
+A dependence may apply to a pair of ACTIVITY TYPES, or it may be true only for particular ACTIVITIES. A DESIGN DEPENDENCE is about the relationship between ACTIVITY TYPES. It expresses the fact that whenever a particular ACTIVITY TYPE is to be carried out, a specified ACTIVITY TYPE must precede or follow it. Figure 5.13 shows that each DESIGN DEPENDENCE must be of one ACTIVITY TYPE on another, and each ACTIVITY TYPE may be subject to a DESIGN DEPENDENCE on another ,ACTIVITY TYPE. (The first cannot start until the second is complete.)
+
+![figure5.13](figure5.13.png)
+
+在我们的例子中，这个替换能源的行为类型包含六个行为类型。一个设计依赖在任何时间都区分开行为类型的先后，卸载电源依赖于卸载覆盖面，卸载线缆也依赖于卸载覆盖面。
+In our example, the ACTIVITY TYPE "Replace power supply" consists of six ACTIVITY TYPES including, among others, "Remove cover" and "Remove power supply." (It is a matter of the terminology of the company involved whether the steps in the PERT chart represent ACTIVITY TYPE STEPS or simply OTHER ACTIVITY TYPES.) A DESIGN DEPENDENCE then dictates that any time the ACTIVITY TYPES are carried out, "Remove power supply" depends on (that is, must follow) "Remove cover," and another dictates that "Remove wiring harness" also depends on (must follow) "Remove cover."
+
+
+An ACTUAL DEPENDENCE, on the other hand, is about the relationships between ACTIVITIES as they are expected actually to occur. It represents the fact that an ACTIVITY must happen before another ACTIVITY can be carried out. Figure 5.13 shows that an ACTUAL DEPENDENCE is of one ACTIVITY, on another ACTIVITY, so one actual ACTIVITY cannot be started before another is completed.
