--- a/geekbang/20 | 幻读是什么，幻读有什么问题？.md
+++ b/geekbang/20 | 幻读是什么，幻读有什么问题？.md
@@ -40,6 +40,9 @@ commit;
 |t5|begin;select * from t where d = 5 for update;/q1/ result:(0,0,5),(5,5,5),(1,1,5)|||
 |t6|commit;|||
 
+
+可以看到，session A 里执行了三次查询，分别是 Q1、Q2 和 Q3。它们的 SQL 语句相同，都是 select * from t where d=5 for update。这个语句的意思你应该很清楚了，查所有 d=5 的行，而且使用的是当前读，并且加上写锁。现在，我们来看一下这三条 SQL 语句，分别会返回什么结果。
+
 1. Q1 只返回 id=5 这一行；
 2. 在 T2 时刻，session B 把 id=0 这一行的 d 值改成了 5，因此 T3 时刻 Q2 查出来的是 id=0 和 id=5 这两行；
 3. 在 T4 时刻，session C 又插入一行（1,1,5），因此 T5 时刻 Q3 查出来的是 id=0、id=1 和 id=5 的这三行。
