--- a/geekbang/36 | 为什么临时表可以重名？.md
+++ b/geekbang/36 | 为什么临时表可以重名？.md
@@ -84,6 +84,9 @@ select v from ht where k >= M order by t_modified desc limit 100;
 
 *在实践中，我们往往会发现每个分库的计算量都不饱和，所以会直接把临时表 temp_ht 放到 32 个分库中的某一个上。这时的查询逻辑与图 3 类似，你可以自己再思考一下具体的流程。*
 
+![](./image/图%203%20跨库查询流程示意图.jpg)
+
+
 ## 为什么临时表可以重名？
 
 ```sql
@@ -131,7 +134,7 @@ insert into t_normal select * from temp_t;/*Q4*/
 
 你可能会说，如果把 binlog 设置为 row 格式就好了吧？因为 binlog 是 row 格式时，在记录 insert into t_normal 的 binlog 时，记录的是这个操作的数据，即：write_row event 里面记录的逻辑是“插入一行数据（1,1)”。
 
-确实是这样。如果当前的 binlog_format=row，那么跟临时表有关的语句，就不会记录到 binlog 里。也就是说，只在 binlog_format=statment/mixed 的时候，binlog 中才会记录临时表的操作。
+**确实是这样。如果当前的 binlog_format=row，那么跟临时表有关的语句，就不会记录到 binlog 里。也就是说，只在 binlog_format=statment/mixed 的时候，binlog 中才会记录临时表的操作。**
 
 这种情况下，创建临时表的语句会传到备库执行，因此备库的同步线程就会创建这个临时表。主库在线程退出的时候，会自动删除临时表，但是备库同步线程是持续在运行的。所以，这时候我们就需要在主库上再写一个 DROP TEMPORARY TABLE 传给备库执行。
 
@@ -180,6 +183,10 @@ alter temp_t rename to temp_t2(ok)
 rename table temp_t2 to temp_t3 (error)
 ```
 
+![](./image/图%206%20关于临时表改名的思考题.png)
+
+可以看到，我们可以使用 alter table 语法修改临时表的表名，而不能使用 rename 语法。你知道这是什么原因吗？
+
 ## 上期问题时间
 
 ```sql
@@ -203,12 +210,16 @@ select * from t1 join t2 on(t1.a=t2.a) join t3 on (t2.b=t3.b) where t1.c>=X and 
 
 总之，整体的思路就是，尽量让每一次参与 join 的驱动表的数据集，越小越好，因为这样我们的驱动表就会越小。
 
+如果语句使用了索引 a，结果还要对 a 排序，就不用 MRR 优化了，否则回表完还要增加额外的排序过程，得不偿失。
+
+## Q&A
+
+老师，不同线程可以使用同名的临时表，这个没有问题。但是如果在程序中，用的是连接池中的连接来操作的，而这些连接不会释放，和数据库保持长连接。这样使用临时表会有问题吗?。会，“临时表会自动回收”这个功能，主要用于“应用程序异常断开、MySQL异常重启”后，不需要主动去删除表。
+
+而平时正常使用的时候，用完删除，还是应该有的好习惯。
+
 “insert into select语句好像会给select的表加锁，如果没有索引，就锁全表”，是的。
 这类最好不要很大胆😆，如果不是业务急需的，从源表导出来再写到目标表也是好的。
 
-
-
-
-
-
+临时表建表语法create temporary table ，和普通的表不一样，和内存表也不一样。内存表数据保存到内存里，重启会丢失，临时表会写入到磁盘。临时表只对自己的session中可见，session结束后自动删除表结构和表数据。适用场景是分库分表，查询到的数据在临时表中做聚合。临时表可以重名，实际的存储文件名有线程id，在内存中表的命名有table_ref_key，是由库名加表名加serverid+线程id组成。bin log设置为row模式，临时表不会同步到备库中，设置为statement模式，会同步到备库中。
 
