--- a/geekbang/37 | 什么时候会使用内部临时表？.md
+++ b/geekbang/37 | 什么时候会使用内部临时表？.md
@@ -31,6 +31,8 @@ call idata();
 
 下图是这个语句的 explain 结果。
 
+![](image/图%201%20union%20语句%20explain%20结果.png)
+
 + 第二行的 key=PRIMARY，说明第二个子句用到了索引 id。
 + 第三行的 Extra 字段，表示在对子查询的结果集做 union 的时候，使用了临时表 (Using temporary)。
 
@@ -45,7 +47,7 @@ call idata();
 
 可以看到，这里的内存临时表起到了暂存数据的作用，而且计算过程还用上了临时表主键 id 的唯一性约束，实现了 union 的语义。
 
-顺便提一下，如果把上面这个语句中的 union 改成 union all 的话，就没有了“去重”的语义。这样执行的时候，就依次执行子查询，得到的结果直接作为结果集的一部分，发给客户端。因此也就不需要临时表了。
+**顺便提一下，如果把上面这个语句中的 union 改成 union all 的话，就没有了“去重”的语义。这样执行的时候，就依次执行子查询，得到的结果直接作为结果集的一部分，发给客户端。因此也就不需要临时表了。**
 
 ## group by 执行流程
 
@@ -55,6 +57,8 @@ select id%10 as m, count(*) as c from t1 group by m;
 
 这个语句的逻辑是把表 t1 里的数据，按照 id%10 进行分组统计，并按照 m 的结果排序后输出。它的 explain 结果
 在 Extra 字段里面，我们可以看到三个信息：
+
+![](./image/图%204%20group%20by%20的%20explain%20结果.png)
 
 1. Using index，表示这个语句使用了覆盖索引，选择了索引 a，不需要回表；
 2. Using temporary，表示使用了临时表；
@@ -68,7 +72,7 @@ select id%10 as m, count(*) as c from t1 group by m;
    2. 如果表中有主键为 x 的行，就将 x 这一行的 c 值加 1；
 3. 遍历完成后，再根据字段 m 做排序，得到结果集返回给客户端。
 
-如果你的需求并不需要对结果进行排序，那你可以在 SQL 语句末尾增加 order by null，也就是改成：
+**如果你的需求并不需要对结果进行排序，那你可以在 SQL 语句末尾增加 order by null，也就是改成：**
 
 ```sql
 select id%10 as m, count(*) as c from t1 group by m order by null;
@@ -134,8 +138,11 @@ select SQL_BIG_RESULT id%100 as m, count(*) as c from t1 group by m;
 3. 如果 group by 需要统计的数据量不大，尽量只使用内存临时表；也可以通过适当调大 tmp_table_size 参数，来避免用到磁盘临时表；
 4. 如果数据量实在太大，使用 SQL_BIG_RESULT 这个提示，来告诉优化器直接使用排序算法得到 group by 的结果。
 
+## 上期问题时间
 
+上期的问题是：为什么不能用 rename 修改临时表的改名。
 
+在实现上，执行 rename table 语句的时候，要求按照“库名 / 表名.frm”的规则去磁盘找文件，但是临时表在磁盘上的 frm 文件是放在 tmpdir 目录下的，并且文件名的规则是“#sql{进程 id}_{线程 id}_ 序列号.frm”，因此会报“找不到文件名”的错误。
 
-
+## Q&A
 
